@@ -1,3 +1,10 @@
+2008-01-01  Bernhard Walle <bernhard.walle@gmx.de>
+
+	* trace downloading
+	* Windows: fix problem that download is corrupted since Windows
+	  discriminates between binary and text files and the ios::binary
+	  was missing in the download code
+
 2007-12-31  Bernhard Walle <bernhard.walle@gmx.de>
 
 	* GUI: report downloading in status bar
